Add wrapper task

--- a/build.gradle
+++ b/build.gradle
@@ -20,3 +20,8 @@ allprojects {
 task clean(type: Delete) {
   delete rootProject.buildDir
 }
+
+task wrapper(type: Wrapper) {
+  description 'Creates the gradle wrapper.'
+  gradleVersion = '4.1-rc-1'
+}
