--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,6 @@ dependencies:
   pre:
     - mkdir -p ${ANDROID_HOME}/licenses
     - echo $ANDROID_SDK_LICENSE > ${ANDROID_HOME}/licenses/android-sdk-license
-    - bash ./misc/download_keystore.sh
   override:
     - ./gradlew dependencies || true
 
@@ -37,4 +36,7 @@ android:
   - ".+"
 
 script:
-  ./gradlew dependencies
+  ./gradlew clean
+  ./gradlew wrapper
+  ./gradlew build
+  ./gradlew :app:assembleDebug
