--- a/.travis.yml
+++ b/.travis.yml
@@ -1,42 +1,53 @@
 language: android
-
+sudo: required
 jdk: oraclejdk8
 
-sudo: required
+before_cache:
+ - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+ - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 
-dependencies:
-  pre:
-    - mkdir -p ${ANDROID_HOME}/licenses
-    - echo $ANDROID_SDK_LICENSE > ${ANDROID_HOME}/licenses/android-sdk-license
-  override:
-    - ./gradlew dependencies || true
+ cache:
+  directories:
+  - $HOME/.gradle/caches/
+  - $HOME/.gradle/wrapper/
 
-test:
-  override:
-    - ./gradlew clean assemble -Dpre-dex=false --console=plain --stacktrace
-    - ./gradlew test --console=plain
-    - ./gradlew lint --console=plain
-
-    - cp -r app/build/outputs $CIRCLE_ARTIFACTS
-    - cp -r app/build/test-results/* $CIRCLE_TEST_REPORTS
+env:
+ global:
+ - ANDROID_API=26
+ - EMULATOR_API=21
+ - ANDROID_BUILD_TOOLS=26.0.0
+ - ADB_INSTALL_TIMEOUT=5 # minutes
 
 android:
-  components:
-  - tools
-  - platform-tools
-  - build-tools-25.0.2
-  - android-25
-  - extra-android-support
-  - extra-android-m2repository
-  - extra-google-m2repository
-  licenses:
-  - android-sdk-preview-license-.+
-  - android-sdk-license-.+
-  - google-gdk-license-.+
-  - ".+"
+ components:
+ - tools
+ - platform-tools
+ - build-tools-$ANDROID_BUILD_TOOLS
+ - android-$ANDROID_API
+ - android-$EMULATOR_API_LEVEL
+ - extra-google-m2repository
+ - extra-android-m2repository # for design library
+ - addon-google_apis-google-19 # google play services
+ - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
+ - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
+
+ licenses:
+ - android-sdk-preview-license-.+
+ - android-sdk-license-.+
+ - google-gdk-license-.+
+
+before_install:
+- mkdir "$ANDROID_HOME/licenses" || true
+- echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
+- echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
+- chmod +x gradlew
+- ./gradlew dependencies || true
+
+before_script:
+- echo no | android create avd --force -n test -t android-21 --abi x86
+- emulator -avd test -no-skin -no-audio -no-window &
+- android-wait-for-emulator
+- adb shell input keyevent 82 &
 
 script:
-  ./gradlew clean
-  ./gradlew wrapper
-  ./gradlew build
-  ./gradlew :app:assembleDebug
+- "./gradlew clean build connectedCheck -PdisablePreDex --stacktrace"
