--- a/.travis.yml
+++ b/.travis.yml
@@ -43,11 +43,5 @@ before_install:
 - chmod +x gradlew
 - ./gradlew dependencies || true
 
-before_script:
-- echo no | android create avd --force -n test -t android-21 --abi x86
-- emulator -avd test -no-skin -no-audio -no-window &
-- android-wait-for-emulator
-- adb shell input keyevent 82 &
-
 script:
-- "./gradlew clean build connectedCheck -PdisablePreDex --stacktrace"
+- "./gradlew clean build"
