--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,14 @@ dependencies {
 
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
   implementation 'com.android.support:appcompat-v7:26.0.0'
+  implementation 'com.github.scribejava:scribejava-apis:4.0.0'
 
-  testImplementation 'junit:junit:4.12'
   androidTestImplementation 'com.android.support.test:runner:1.0.0'
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.0'
+
+  testImplementation 'junit:junit:4.12'
+  testImplementation 'org.assertj:assertj-core:3.6.1'
+  testImplementation('com.nhaarman:mockito-kotlin:1.5.0') {
+    exclude group: 'org.jetbrains.kotlin'
+  }
 }
