[WIP] Configure signingConfig in gradle

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+config/release.properties
 *.iml
 .gradle
 /local.properties
@@ -80,7 +80,6 @@ crashlytics-build.properties
 fabric.properties
 ### Android template
 =======
->>>>>>> 40d72911641ca06f61f2670af46df70bb3193618
 # Built application files
 *.apk
 *.ap_
@@ -182,3 +181,4 @@ hs_err_pid*
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
+/config/release.properties
