--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,82 +7,64 @@ props.load(new FileInputStream(rootProject.file('config/release.properties')))
 
 android {
 
-  signingConfigs {
-    if (props != null &&
-        props.containsKey('STORE_FILE') &&
-        props.containsKey('STORE_PASSWORD') &&
-        props.containsKey('KEY_ALIAS') &&
-        props.containsKey('KEY_PASSWORD')) {
-      debug {
-        storeFile file(props['STORE_FILE'])
-      }
-      release {
-        storeFile file(props['STORE_FILE'])
-        keyAlias props['KEY_ALIAS']
-        storePassword props['STORE_PASSWORD']
-        keyPassword props['KEY_PASSWORD']
-      }
-    }
-  }
+	buildTypes {
+		release {
+			minifyEnabled true
+			debuggable false
+			//signingConfig signingConfigs.release
+			proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+		}
 
-  buildTypes {
-    release {
-      minifyEnabled true
-      debuggable false
-      signingConfig signingConfigs.release
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-    }
+		debug {
+			minifyEnabled false
+			debuggable true
+			//signingConfig signingConfigs.debug
+		}
 
-    debug {
-      minifyEnabled false
-      debuggable true
-      signingConfig signingConfigs.debug
-    }
+		foss {
+			debuggable false
+			//signingConfig signingConfigs.release
+		}
+	}
 
-    foss {
-      debuggable false
-      signingConfig signingConfigs.release
-    }
-  }
+	compileSdkVersion 26
+	buildToolsVersion "26.0.0"
+	defaultConfig {
+		applicationId "io.shtanko.picasagallery"
+		targetSdkVersion 26
+		minSdkVersion 14
+		versionCode 1
+		versionName "1.0"
+		testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+	}
+	buildTypes {
+		release {
+			minifyEnabled false
+			proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+		}
+	}
+	lintOptions {
+		abortOnError false
+	}
 
-  compileSdkVersion 26
-  buildToolsVersion "26.0.0"
-  defaultConfig {
-    applicationId "io.shtanko.picasagallery"
-    targetSdkVersion 26
-    minSdkVersion 14
-    versionCode 1
-    versionName "1.0"
-    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-  }
-  buildTypes {
-    release {
-      minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-    }
-  }
-  lintOptions {
-    abortOnError false
-  }
-
-  sourceSets {
-    main.java.srcDirs += 'src/main/kotlin'
-  }
+	sourceSets {
+		main.java.srcDirs += 'src/main/kotlin'
+	}
 }
 
 dependencies {
 
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-  implementation 'com.android.support:appcompat-v7:26.0.0'
-  implementation 'com.github.scribejava:scribejava-apis:4.0.0'
-  implementation 'com.squareup.okhttp3:okhttp:3.8.1'
+	implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+	implementation 'com.android.support:appcompat-v7:26.0.0'
+	implementation 'com.github.scribejava:scribejava-apis:4.0.0'
+	implementation 'com.squareup.okhttp3:okhttp:3.8.1'
 
-  androidTestImplementation 'com.android.support.test:runner:1.0.0'
-  androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.0'
+	androidTestImplementation 'com.android.support.test:runner:1.0.0'
+	androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.0'
 
-  testImplementation 'junit:junit:4.12'
-  testImplementation 'org.assertj:assertj-core:3.6.1'
-  testImplementation('com.nhaarman:mockito-kotlin:1.5.0') {
-    exclude group: 'org.jetbrains.kotlin'
-  }
+	testImplementation 'junit:junit:4.12'
+	testImplementation 'org.assertj:assertj-core:3.6.1'
+	testImplementation('com.nhaarman:mockito-kotlin:1.5.0') {
+		exclude group: 'org.jetbrains.kotlin'
+	}
 }
