--- a/.gitignore
+++ b/.gitignore
@@ -182,3 +182,4 @@ hs_err_pid*
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
 /config/release.properties
+!app/src/dev/google-services.json
