--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -20,11 +20,13 @@ dependencies {
   implementation "com.android.support:appcompat-v7:${supportVersion}"
   implementation "com.android.support:design:${supportVersion}"
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-  implementation 'com.github.scribejava:scribejava-apis:4.0.0'
   implementation 'com.squareup.okhttp3:okhttp:3.8.1'
+  implementation 'com.google.code.findbugs:jsr305:3.0.2'
 
   implementation 'com.google.android.gms:play-services-auth:11.0.4'
   implementation 'com.google.android.gms:play-services-vision:11.0.4'
+
+  implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
   androidTestImplementation 'com.android.support.test:runner:1.0.0'
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.0'
