--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 def props = new Properties()
 props.load(new FileInputStream(rootProject.file('config/release.properties')))
@@ -115,6 +116,10 @@ android {
       }
     }
   }
+}
+
+kapt {
+  generateStubs = true
 }
 
 apply from: 'dependencies.gradle'
