--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -31,9 +31,16 @@ dependencies {
 
   implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
+  implementation 'com.google.code.gson:gson:2.8.1'
+  implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+  implementation('com.squareup.retrofit2:converter-gson:2.1.0') {
+    exclude group: 'com.google.code.gson'
+  }
+
   // RX JAVA
   implementation 'io.reactivex.rxjava2:rxjava:2.1.2'
   implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+  implementation 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
 
   // DI
   implementation "com.google.dagger:dagger:${daggerVersion}"
