--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="io.shtanko.picasagallery">
 
-  <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.INTERNET"/>
 
   <application
       android:name=".PicasaApplication"
@@ -27,10 +27,9 @@
       android:label="@string/app_name"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
-      android:theme="@style/AppTheme">
+      android:theme="@style/PicasaGallery">
 
-
-    <activity android:name="io.shtanko.picasagallery.view.main.MainActivity">
+    <activity android:name="io.shtanko.picasagallery.view.launch.LaunchActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
         <action android:name="android.intent.action.VIEW"/>
@@ -43,8 +42,9 @@
     <activity
         android:name="io.shtanko.picasagallery.view.auth.SignInActivity"
         android:label="Auth">
-
     </activity>
+
+    <activity android:name=".view.main.MainActivity"/>
 
   </application>
 </manifest>
