--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -22,6 +22,7 @@ dependencies {
 
   implementation "com.android.support:appcompat-v7:${supportVersion}"
   implementation "com.android.support:design:${supportVersion}"
+  implementation "com.android.support:cardview-v7:${supportVersion}"
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
   implementation 'com.squareup.okhttp3:okhttp:3.8.1'
   implementation 'com.google.code.findbugs:jsr305:3.0.2'
@@ -40,7 +41,7 @@ dependencies {
   // RX JAVA
   implementation 'io.reactivex.rxjava2:rxjava:2.1.2'
   implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-  implementation 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
+  implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
 
   // DI
   implementation "com.google.dagger:dagger:${daggerVersion}"
