--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,14 +20,23 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
-def commitCount = Integer.parseInt(
-    'git rev-list --count HEAD'.execute([], project.rootDir).text.trim())
-
 def props = new Properties()
 props.load(new FileInputStream(rootProject.file('config/release.properties')))
 
 
 android {
+
+  compileSdkVersion 26
+  buildToolsVersion "26.0.1"
+
+  defaultConfig {
+    applicationId "io.shtanko.picasagallery"
+    targetSdkVersion 26
+    minSdkVersion 14
+    versionCode 22
+    versionName "1.0"
+    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+  }
 
   testOptions {
     unitTests.returnDefaultValues = true
@@ -67,7 +76,7 @@ android {
       shrinkResources true
       pseudoLocalesEnabled true
       debuggable false
-      //signingConfig signingConfigs.release
+      signingConfig signingConfigs.release
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
 
@@ -75,12 +84,12 @@ android {
       minifyEnabled false
       debuggable true
       useProguard false
-      //signingConfig signingConfigs.debug
+      signingConfig signingConfigs.debug
     }
 
     foss {
       debuggable false
-      //signingConfig signingConfigs.release
+      signingConfig signingConfigs.release
     }
   }
   flavorDimensions "type"
@@ -89,18 +98,6 @@ android {
     dev {}
     mock {}
     prod {}
-  }
-
-  compileSdkVersion 26
-  buildToolsVersion "26.0.1"
-
-  defaultConfig {
-    applicationId "io.shtanko.picasagallery"
-    targetSdkVersion 26
-    minSdkVersion 14
-    versionCode 22
-    versionName "1.0"
-    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
   }
 
   lintOptions {
