--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -25,6 +25,7 @@ dependencies {
   implementation "com.android.support:cardview-v7:${supportVersion}"
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
   implementation 'com.squareup.okhttp3:okhttp:3.8.1'
+  implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
   implementation 'com.google.code.findbugs:jsr305:3.0.2'
 
   implementation "com.google.android.gms:play-services-auth:${playServicesVersion}"
