--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,7 +76,7 @@ android {
       shrinkResources true
       pseudoLocalesEnabled true
       debuggable false
-      signingConfig signingConfigs.release
+      //signingConfig signingConfigs.release
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
 
@@ -84,12 +84,12 @@ android {
       minifyEnabled false
       debuggable true
       useProguard false
-      signingConfig signingConfigs.debug
+      //signingConfig signingConfigs.debug
     }
 
     foss {
       debuggable false
-      signingConfig signingConfigs.release
+      //signingConfig signingConfigs.release
     }
   }
   flavorDimensions "type"
