--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -23,6 +23,8 @@ dependencies {
   implementation "com.android.support:appcompat-v7:${supportVersion}"
   implementation "com.android.support:design:${supportVersion}"
   implementation "com.android.support:cardview-v7:${supportVersion}"
+  implementation "com.android.support:palette-v7:${supportVersion}"
+
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
   implementation 'com.squareup.okhttp3:okhttp:3.8.1'
   implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
@@ -47,6 +49,8 @@ dependencies {
   // DI
   implementation "com.google.dagger:dagger:${daggerVersion}"
   kapt "com.google.dagger:dagger-compiler:${daggerVersion}"
+
+  implementation 'com.github.bumptech.glide:glide:3.8.0'
 
   androidTestImplementation 'com.android.support.test:runner:1.0.0'
   androidTestImplementation 'com.android.support.test:rules:1.0.0'
