--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,5 +52,7 @@
 
     <activity android:name=".view.main.MainActivity"/>
 
+    <activity android:name=".view.profile.ProfileActivity"/>
+
   </application>
 </manifest>
