--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -48,7 +48,12 @@ dependencies {
 
   // DI
   implementation "com.google.dagger:dagger:${daggerVersion}"
+  implementation "com.google.dagger:dagger-android:${daggerVersion}"
+  implementation "com.google.dagger:dagger-android-support:${daggerVersion}"
   kapt "com.google.dagger:dagger-compiler:${daggerVersion}"
+  kapt "com.google.dagger:dagger-android-processor:${daggerVersion}"
+  compileOnly 'org.glassfish:javax.annotation:10.0-b28'
+
 
   implementation 'com.github.bumptech.glide:glide:3.8.0'
 
