--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -19,6 +19,8 @@ dependencies {
   def supportVersion = '26.0.1'
   def daggerVersion = '2.11'
   def playServicesVersion = '11.0.4'
+  def espressoVersion = '3.0.0'
+  def runnerRulesVersion = '1.0.0'
 
   implementation "com.android.support:appcompat-v7:${supportVersion}"
   implementation "com.android.support:design:${supportVersion}"
@@ -57,9 +59,18 @@ dependencies {
 
   implementation 'com.github.bumptech.glide:glide:3.8.0'
 
-  androidTestImplementation 'com.android.support.test:runner:1.0.0'
-  androidTestImplementation 'com.android.support.test:rules:1.0.0'
-  androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.0'
+  // TESTING
+
+  androidTestImplementation "com.android.support.test:runner:$runnerRulesVersion"
+  androidTestImplementation "com.android.support.test:rules:$runnerRulesVersion"
+  androidTestImplementation "com.android.support.test.espresso:espresso-core:$espressoVersion"
+  androidTestImplementation "com.android.support.test.espresso:espresso-contrib:$espressoVersion"
+  androidTestImplementation "com.android.support.test.espresso:espresso-intents:$espressoVersion"
+  androidTestImplementation "com.android.support:support-annotations:$supportVersion"
+  androidTestImplementation "com.android.support:support-v4:$supportVersion"
+  androidTestImplementation "com.android.support:recyclerview-v7:$supportVersion"
+  androidTestImplementation "com.android.support:appcompat-v7:$supportVersion"
+  androidTestImplementation "com.android.support:design:$supportVersion"
 
   testImplementation 'junit:junit:4.12'
   testImplementation 'org.assertj:assertj-core:3.6.1'
