--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -18,9 +18,10 @@
 dependencies {
   def supportVersion = '26.0.1'
   def daggerVersion = '2.11'
-  def playServicesVersion = '11.0.4'
+  def playServicesVersion = '11.2.0'
   def espressoVersion = '3.0.0'
   def runnerRulesVersion = '1.0.0'
+  def architectureComponentsVersion = "1.0.0-alpha9"
 
   implementation "com.android.support:appcompat-v7:${supportVersion}"
   implementation "com.android.support:design:${supportVersion}"
@@ -48,6 +49,14 @@ dependencies {
   implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
   implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
 
+  // ARCHITECTURE COMPONENTS
+  implementation "android.arch.lifecycle:runtime:$architectureComponentsVersion"
+  implementation "android.arch.lifecycle:extensions:$architectureComponentsVersion"
+  kapt "android.arch.lifecycle:compiler:$architectureComponentsVersion"
+  //implementation "android.arch.persistence.room:runtime:$architectureComponentsVersion"
+  //kapt "android.arch.persistence.room:compiler:$architectureComponentsVersion"
+  //implementation "android.arch.persistence.room:rxjava2:$architectureComponentsVersion"
+
   // DI
   implementation "com.google.dagger:dagger:${daggerVersion}"
   implementation "com.google.dagger:dagger-android:${daggerVersion}"
@@ -57,10 +66,10 @@ dependencies {
   compileOnly 'org.glassfish:javax.annotation:10.0-b28'
 
 
+
   implementation 'com.github.bumptech.glide:glide:3.8.0'
 
   // TESTING
-
   androidTestImplementation "com.android.support.test:runner:$runnerRulesVersion"
   androidTestImplementation "com.android.support.test:rules:$runnerRulesVersion"
   androidTestImplementation "com.android.support.test.espresso:espresso-core:$espressoVersion"
@@ -71,6 +80,9 @@ dependencies {
   androidTestImplementation "com.android.support:recyclerview-v7:$supportVersion"
   androidTestImplementation "com.android.support:appcompat-v7:$supportVersion"
   androidTestImplementation "com.android.support:design:$supportVersion"
+  //androidTestImplementation "android.arch.persistence.room:testing:$architectureComponentsVersion"
+  androidTestImplementation "android.arch.core:core-testing:$architectureComponentsVersion"
+
 
   testImplementation 'junit:junit:4.12'
   testImplementation 'org.assertj:assertj-core:3.6.1'
