--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,8 @@
  */
 
 buildscript {
-  ext.kotlin_version = '1.1.4'
+  ext.kotlin_version = '1.1.4-2'
+  ext.realm_version = '3.5.0'
   repositories {
     google()
     jcenter()
@@ -25,6 +26,8 @@ buildscript {
     classpath 'com.android.tools.build:gradle:3.0.0-beta2'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     classpath 'com.google.gms:google-services:3.1.0'
+    classpath "io.realm:realm-gradle-plugin:$realm_version"
+    classpath 'org.ajoberstar:grgit:1.5.0'
   }
 }
 
