--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,18 @@ language: android
 sudo: required
 jdk: oraclejdk8
 
+notifications:
+  email:
+  - adamluissean@gmail.com
+
 before_cache:
  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 
 cache:
   directories:
+  - $HOME/.gradle/daemon
+  - $HOME/.gradle/native
   - $HOME/.gradle/caches/
   - $HOME/.gradle/wrapper/
 
@@ -16,7 +22,13 @@ env:
  - ANDROID_API=26
  - EMULATOR_API=21
  - ANDROID_BUILD_TOOLS=26.0.0
- - ADB_INSTALL_TIMEOUT=5 # minutes
+ - ADB_INSTALL_TIMEOUT=15 # minutes
+
+before_script:
+  - chmod +x gradlew
+  - android list targets
+  - echo no | android create avd --force --name AndroidEmulator0 --target $ANDROID_TARGET --abi $ANDROID_ABI #Create AVD for given api
+  - emulator -avd AndroidEmulator0 -no-skin -no-audio -no-window & #Start emulator
 
 android:
  components:
@@ -44,4 +56,8 @@ before_install:
 - ./gradlew dependencies || true
 
 script:
-- "./gradlew clean build -Pbuild=dev"
+- echo "Travis branch is $TRAVIS_BRANCH"
+- android-wait-for-emulator
+- adb devices
+- adb shell input keyevent 82 &
+- "./gradlew clean build -Pbuild=dev connectedAndroidTest -PdisablePreDex --stacktrace"
