--- a/.travis.yml
+++ b/.travis.yml
@@ -26,22 +26,34 @@ env:
 
 before_script:
   - chmod +x gradlew
-  - android list targets
-  - echo no | android create avd --force --name AndroidEmulator0 --target $ANDROID_TARGET --abi $ANDROID_ABI #Create AVD for given api
+  - android list target
+  - echo no | android create avd --force -n test -k "system-images;android-25;google_apis;x86"
   - emulator -avd AndroidEmulator0 -no-skin -no-audio -no-window & #Start emulator
 
 android:
- components:
- - tools
- - platform-tools
- - build-tools-$ANDROID_BUILD_TOOLS
- - android-$ANDROID_API
- - android-$EMULATOR_API_LEVEL
- - extra-google-m2repository
- - extra-android-m2repository # for design library
- - addon-google_apis-google-19 # google play services
- - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
- - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
+  update_sdk: true  #Check for the updates each time you run the build.
+  components:
+  - tools
+  - platform-tools
+  - build-tools-$ANDROID_BUILD_TOOLS
+  - android-$ANDROID_API
+  - android-$EMULATOR_API_LEVEL
+  - extra-google-google_play_services
+  - extra-google-m2repository
+  - extra-android-m2repository # for design library
+  - addon-google_apis-google-19 # google play services
+  - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
+  - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
+  - sys-img-armeabi-v7a-android-19
+  - sys-img-armeabi-v7a-android-21
+  - sys-img-armeabi-v7a-android-23
+  - sys-img-armeabi-v7a-android-24
+  - sys-img-armeabi-v7a-android-25
+  - sys-img-x86-android-19
+  - sys-img-x86-android-21
+  - sys-img-x86-android-23
+  - sys-img-x86-android-24
+  - sys-img-x86-android-25
 
  licenses:
  - android-sdk-preview-license-.+
