--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -22,6 +22,7 @@ dependencies {
   def espressoVersion = '3.0.0'
   def runnerRulesVersion = '1.0.0'
   def architectureComponentsVersion = "1.0.0-alpha9"
+  def junitVersion = "4.12"
 
   implementation "com.android.support:appcompat-v7:${supportVersion}"
   implementation "com.android.support:design:${supportVersion}"
@@ -53,9 +54,6 @@ dependencies {
   implementation "android.arch.lifecycle:runtime:$architectureComponentsVersion"
   implementation "android.arch.lifecycle:extensions:$architectureComponentsVersion"
   kapt "android.arch.lifecycle:compiler:$architectureComponentsVersion"
-  //implementation "android.arch.persistence.room:runtime:$architectureComponentsVersion"
-  //kapt "android.arch.persistence.room:compiler:$architectureComponentsVersion"
-  //implementation "android.arch.persistence.room:rxjava2:$architectureComponentsVersion"
 
   // DI
   implementation "com.google.dagger:dagger:${daggerVersion}"
@@ -65,26 +63,36 @@ dependencies {
   kapt "com.google.dagger:dagger-android-processor:${daggerVersion}"
   compileOnly 'org.glassfish:javax.annotation:10.0-b28'
 
-
-
+  // IMAGE PROCESSING
   implementation 'com.github.bumptech.glide:glide:3.8.0'
 
   // TESTING
   androidTestImplementation "com.android.support.test:runner:$runnerRulesVersion"
   androidTestImplementation "com.android.support.test:rules:$runnerRulesVersion"
-  androidTestImplementation "com.android.support.test.espresso:espresso-core:$espressoVersion"
+
+  androidTestImplementation("com.android.support.test.espresso:espresso-core:$espressoVersion") {
+    exclude group: 'com.android.support', module: 'support-annotations'
+    exclude group: 'com.android.support', module: 'appcompat'
+    exclude group: 'com.android.support', module: 'support-v4'
+    exclude module: 'recyclerview-v7'
+  }
+
   androidTestImplementation "com.android.support.test.espresso:espresso-contrib:$espressoVersion"
   androidTestImplementation "com.android.support.test.espresso:espresso-intents:$espressoVersion"
+
   androidTestImplementation "com.android.support:support-annotations:$supportVersion"
   androidTestImplementation "com.android.support:support-v4:$supportVersion"
   androidTestImplementation "com.android.support:recyclerview-v7:$supportVersion"
   androidTestImplementation "com.android.support:appcompat-v7:$supportVersion"
   androidTestImplementation "com.android.support:design:$supportVersion"
-  //androidTestImplementation "android.arch.persistence.room:testing:$architectureComponentsVersion"
   androidTestImplementation "android.arch.core:core-testing:$architectureComponentsVersion"
+  androidTestImplementation "com.android.support.test.espresso.idling:idling-concurrent:$espressoVersion"
+  implementation "com.android.support.test.espresso:espresso-idling-resource:$espressoVersion"
+  androidTestImplementation "com.google.code.findbugs:jsr305:3.0.2"
 
 
-  testImplementation 'junit:junit:4.12'
+  testImplementation 'org.jetbrains.kotlin:kotlin-test-junit:1.1.2'
+  testImplementation "junit:junit:$junitVersion"
   testImplementation 'org.assertj:assertj-core:3.6.1'
   testImplementation('com.nhaarman:mockito-kotlin:1.5.0') {
     exclude group: 'org.jetbrains.kotlin'
