--- a/.travis.yml
+++ b/.travis.yml
@@ -20,18 +20,21 @@ cache:
 env:
  global:
  - ANDROID_API=26
- - EMULATOR_API=21
+ - EMULATOR_API_LEVEL=25
  - ANDROID_BUILD_TOOLS=26.0.0
  - ADB_INSTALL_TIMEOUT=15 # minutes
+ - ANDROID_BUILD_TOOLS_VERSION=26.0.0
+ - ANDROID_ABI=armeabi-v7a
+ - ANDROID_TAG=google_apis
 
 before_script:
   - chmod +x gradlew
   - android list target
-  - echo no | android create avd --force -n test -k "system-images;android-25;google_apis;x86"
-  - emulator -avd AndroidEmulator0 -no-skin -no-audio -no-window & #Start emulator
+#  - echo no | android create avd --force -n Pixel -t "android-"$EMULATOR_API_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
+#  - android list avd
+#  - emulator -avd Pixel -no-skin -no-window & #Start emulator
 
 android:
-  update_sdk: true  #Check for the updates each time you run the build.
   components:
   - tools
   - platform-tools
@@ -44,21 +47,15 @@ android:
   - addon-google_apis-google-19 # google play services
   - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
   - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
-  - sys-img-armeabi-v7a-android-19
-  - sys-img-armeabi-v7a-android-21
-  - sys-img-armeabi-v7a-android-23
-  - sys-img-armeabi-v7a-android-24
-  - sys-img-armeabi-v7a-android-25
-  - sys-img-x86-android-19
-  - sys-img-x86-android-21
-  - sys-img-x86-android-23
-  - sys-img-x86-android-24
-  - sys-img-x86-android-25
+  # Emulator sys img
+  - sys-img-$ANDROID_ABI-$ANDROID_TAG-$EMULATOR_API_LEVEL
 
- licenses:
- - android-sdk-preview-license-.+
- - android-sdk-license-.+
- - google-gdk-license-.+
+
+  licenses:
+      - 'android-sdk-preview-license-.+'
+      - 'android-sdk-license-.+'
+      - 'google-gdk-license-.+'
+      - '.+'
 
 before_install:
 - mkdir "$ANDROID_HOME/licenses" || true
@@ -69,7 +66,7 @@ before_install:
 
 script:
 - echo "Travis branch is $TRAVIS_BRANCH"
-- android-wait-for-emulator
+#- android-wait-for-emulator
 - adb devices
 - adb shell input keyevent 82 &
-- "./gradlew clean build -Pbuild=dev connectedAndroidTest -PdisablePreDex --stacktrace"
+- "./gradlew clean build -Pbuild=dev -PdisablePreDex --stacktrace"
