--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
-apply plugin: 'realm-android'
+//apply plugin: 'realm-android'
 
 def props = new Properties()
 props.load(new FileInputStream(rootProject.file('config/release.properties')))
