--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@
 
 buildscript {
   ext.kotlin_version = '1.1.4-2'
-  ext.realm_version = '3.5.0'
+  //ext.realm_version = '3.5.0'
   repositories {
     google()
     jcenter()
@@ -26,7 +26,7 @@ buildscript {
     classpath 'com.android.tools.build:gradle:3.0.0-beta2'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     classpath 'com.google.gms:google-services:3.1.0'
-    classpath "io.realm:realm-gradle-plugin:$realm_version"
+    //classpath "io.realm:realm-gradle-plugin:$realm_version"
     classpath 'org.ajoberstar:grgit:1.5.0'
   }
 }
