--- a/config/debug.properties
+++ b/config/debug.properties
@@ -15,7 +15,7 @@
 #
 #
 
-STORE_FILE=
-STORE_PASSWORD=
-KEY_ALIAS=
-KEY_PASSWORD=
+STORE_FILE=../config/debug.keystore
+STORE_PASSWORD=android
+KEY_ALIAS=androiddebugkey
+KEY_PASSWORD=android
