[WIP] Add albums grid and try use test coverage(https://codecov.io)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'jacoco-android'
 
 def props = new Properties()
 if (rootProject.file('config/release.properties').exists()) {
@@ -101,6 +102,7 @@ android {
       minifyEnabled false
       debuggable true
       useProguard false
+      testCoverageEnabled true
       signingConfig signingConfigs.debug
     }
 
