--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ env:
  - ANDROID_BUILD_TOOLS_VERSION=26.0.0
  - ANDROID_ABI=armeabi-v7a
  - ANDROID_TAG=google_apis
+ - CODECOV_TOKEN=c3c594dd-b509-4ca0-9fd0-248dc1af7cf3
 
 before_script:
   - chmod +x gradlew
@@ -72,4 +73,7 @@ script:
 #- android-wait-for-emulator
 - adb devices
 - adb shell input keyevent 82 &
-- "./gradlew clean build -Pbuild=dev -PdisablePreDex --stacktrace"
+- "./gradlew clean build -Pbuild=dev -PdisablePreDex --stacktrace jacocoTestReport"
+
+after_success:
+  — bash <(curl -s https://codecov.io/bash)
