--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ buildscript {
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     classpath 'com.google.gms:google-services:3.1.0'
     classpath 'org.ajoberstar:grgit:1.5.0'
+    classpath 'com.dicedmelon.gradle:jacoco-android:0.1.2'
   }
 }
 
