--- a/.travis.yml
+++ b/.travis.yml
@@ -74,7 +74,7 @@ script:
 #- android-wait-for-emulator
 - adb devices
 - adb shell input keyevent 82 &
-- "./gradlew clean build -Pbuild=dev -PdisablePreDex --stacktrace jacocoDevDebugTestReport"
+- "./gradlew clean build -Pbuild=dev -PdisablePreDex --stacktrace createDevDebugUnitTestCoverageReport createDevDebugUnitTestCoverageReportKotlin coveralls"
 
 after_success:
     - codecov                       #Run codecov
