--- a/build.gradle
+++ b/build.gradle
@@ -22,11 +22,13 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.0.0-beta2'
+    classpath 'com.android.tools.build:gradle:3.0.0-beta3'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     classpath 'com.google.gms:google-services:3.1.0'
     classpath 'org.ajoberstar:grgit:1.5.0'
     classpath 'com.dicedmelon.gradle:jacoco-android:0.1.2'
+    classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.4.0'
+    classpath 'net.saliman:gradle-cobertura-plugin:2.2.2'
   }
 }
 
@@ -46,5 +48,5 @@ task clean(type: Delete) {
 
 task wrapper(type: Wrapper) {
   description 'Creates the gradle wrapper.'
-  gradleVersion = '4.1-rc-1'
+  gradleVersion = '4.1'
 }
