--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -24,80 +24,80 @@ dependencies {
   def architectureComponentsVersion = "1.0.0-alpha9"
   def junitVersion = "4.12"
 
-  implementation "com.android.support:appcompat-v7:${supportVersion}"
-  implementation "com.android.support:design:${supportVersion}"
-  implementation "com.android.support:cardview-v7:${supportVersion}"
-  implementation "com.android.support:palette-v7:${supportVersion}"
+  compile "com.android.support:appcompat-v7:${supportVersion}"
+  compile "com.android.support:design:${supportVersion}"
+  compile "com.android.support:cardview-v7:${supportVersion}"
+  //compile "com.android.support:palette-v7:${supportVersion}"
 
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+  compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
   //implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-  implementation 'com.squareup.okhttp3:okhttp:3.8.1'
-  implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
-  implementation 'com.google.code.findbugs:jsr305:3.0.2'
+  compile 'com.squareup.okhttp3:okhttp:3.8.1'
+  compile 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+  compile 'com.google.code.findbugs:jsr305:3.0.2'
 
-  implementation "com.google.android.gms:play-services-auth:${playServicesVersion}"
-  implementation "com.google.android.gms:play-services-vision:${playServicesVersion}"
+  compile "com.google.android.gms:play-services-auth:${playServicesVersion}"
+  //compile "com.google.android.gms:play-services-vision:${playServicesVersion}"
 
-  implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+  compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
-  implementation 'com.google.code.gson:gson:2.8.1'
-  implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-  implementation('com.squareup.retrofit2:converter-gson:2.1.0') {
+  compile 'com.google.code.gson:gson:2.8.1'
+  compile 'com.squareup.retrofit2:retrofit:2.3.0'
+  compile('com.squareup.retrofit2:converter-gson:2.1.0') {
     exclude group: 'com.google.code.gson'
   }
 
-  implementation 'pub.devrel:easypermissions:0.3.0'
+  compile 'pub.devrel:easypermissions:0.3.0'
 
   // RX JAVA
-  implementation 'io.reactivex.rxjava2:rxjava:2.1.2'
-  implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-  implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+  compile 'io.reactivex.rxjava2:rxjava:2.1.2'
+  compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+  compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
 
   // ARCHITECTURE COMPONENTS
-  implementation "android.arch.lifecycle:runtime:$architectureComponentsVersion"
-  implementation "android.arch.lifecycle:extensions:$architectureComponentsVersion"
-  kapt "android.arch.lifecycle:compiler:$architectureComponentsVersion"
+  //compile "android.arch.lifecycle:runtime:$architectureComponentsVersion"
+  //compile "android.arch.lifecycle:extensions:$architectureComponentsVersion"
+  //kapt "android.arch.lifecycle:compiler:$architectureComponentsVersion"
 
   // DI
-  implementation "com.google.dagger:dagger:${daggerVersion}"
-  implementation "com.google.dagger:dagger-android:${daggerVersion}"
-  implementation "com.google.dagger:dagger-android-support:${daggerVersion}"
+  compile "com.google.dagger:dagger:${daggerVersion}"
+  compile "com.google.dagger:dagger-android:${daggerVersion}"
+  compile "com.google.dagger:dagger-android-support:${daggerVersion}"
   kapt "com.google.dagger:dagger-compiler:${daggerVersion}"
   kapt "com.google.dagger:dagger-android-processor:${daggerVersion}"
-  compileOnly 'org.glassfish:javax.annotation:10.0-b28'
+  provided 'org.glassfish:javax.annotation:10.0-b28'
 
   // IMAGE PROCESSING
-  implementation 'com.github.bumptech.glide:glide:3.8.0'
+  compile 'com.github.bumptech.glide:glide:3.8.0'
 
   // TESTING
-  androidTestImplementation "com.android.support.test:runner:$runnerRulesVersion"
-  androidTestImplementation "com.android.support.test:rules:$runnerRulesVersion"
+  androidTestCompile "com.android.support.test:runner:$runnerRulesVersion"
+  androidTestCompile "com.android.support.test:rules:$runnerRulesVersion"
 
-  androidTestImplementation("com.android.support.test.espresso:espresso-core:$espressoVersion") {
+  androidTestCompile("com.android.support.test.espresso:espresso-core:$espressoVersion") {
     exclude group: 'com.android.support', module: 'support-annotations'
     exclude group: 'com.android.support', module: 'appcompat'
     exclude group: 'com.android.support', module: 'support-v4'
     exclude module: 'recyclerview-v7'
   }
 
-  androidTestImplementation "com.android.support.test.espresso:espresso-contrib:$espressoVersion"
-  androidTestImplementation "com.android.support.test.espresso:espresso-intents:$espressoVersion"
+  androidTestCompile "com.android.support.test.espresso:espresso-contrib:$espressoVersion"
+  androidTestCompile "com.android.support.test.espresso:espresso-intents:$espressoVersion"
 
-  androidTestImplementation "com.android.support:support-annotations:$supportVersion"
-  androidTestImplementation "com.android.support:support-v4:$supportVersion"
-  androidTestImplementation "com.android.support:recyclerview-v7:$supportVersion"
-  androidTestImplementation "com.android.support:appcompat-v7:$supportVersion"
-  androidTestImplementation "com.android.support:design:$supportVersion"
-  androidTestImplementation "android.arch.core:core-testing:$architectureComponentsVersion"
-  androidTestImplementation "com.android.support.test.espresso.idling:idling-concurrent:$espressoVersion"
-  implementation "com.android.support.test.espresso:espresso-idling-resource:$espressoVersion"
-  androidTestImplementation "com.google.code.findbugs:jsr305:3.0.2"
+  androidTestCompile "com.android.support:support-annotations:$supportVersion"
+  //androidTestCompile "com.android.support:support-v4:$supportVersion"
+  //androidTestCompile "com.android.support:recyclerview-v7:$supportVersion"
+  //androidTestCompile "com.android.support:appcompat-v7:$supportVersion"
+  androidTestCompile "com.android.support:design:$supportVersion"
+  //androidTestCompile "android.arch.core:core-testing:$architectureComponentsVersion"
+  androidTestCompile "com.android.support.test.espresso.idling:idling-concurrent:$espressoVersion"
+  compile "com.android.support.test.espresso:espresso-idling-resource:$espressoVersion"
+  androidTestCompile "com.google.code.findbugs:jsr305:3.0.2"
 
 
-  testImplementation 'org.jetbrains.kotlin:kotlin-test-junit:1.1.2'
-  testImplementation "junit:junit:$junitVersion"
-  testImplementation 'org.assertj:assertj-core:3.6.1'
-  testImplementation('com.nhaarman:mockito-kotlin:1.5.0') {
+  //testCompile 'org.jetbrains.kotlin:kotlin-test-junit:1.1.2'
+  testCompile "junit:junit:$junitVersion"
+  testCompile 'org.assertj:assertj-core:3.6.1'
+  testCompile('com.nhaarman:mockito-kotlin:1.5.0') {
     exclude group: 'org.jetbrains.kotlin'
   }
 }
