--- a/build.gradle
+++ b/build.gradle
@@ -18,11 +18,11 @@
 buildscript {
   ext.kotlin_version = '1.1.4-2'
   repositories {
-    google()
+    mavenCentral()
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.0.0-beta3'
+    classpath 'com.android.tools.build:gradle:2.3.3'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     classpath 'com.google.gms:google-services:3.1.0'
     classpath 'org.ajoberstar:grgit:1.5.0'
@@ -34,7 +34,7 @@ buildscript {
 
 allprojects {
   repositories {
-    google()
+    mavenCentral()
     jcenter()
     maven {
       url 'https://maven.google.com'
@@ -48,5 +48,5 @@ task clean(type: Delete) {
 
 task wrapper(type: Wrapper) {
   description 'Creates the gradle wrapper.'
-  gradleVersion = '4.1'
+  gradleVersion = '3.3'
 }
