--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -16,60 +16,65 @@
  */
 
 dependencies {
+  // region CONSTANTS
   def supportVersion = '26.0.1'
   def daggerVersion = '2.11'
   def playServicesVersion = '11.2.0'
   def espressoVersion = '3.0.0'
   def runnerRulesVersion = '1.0.0'
-  def architectureComponentsVersion = "1.0.0-alpha9"
   def junitVersion = "4.12"
+  // endregion
 
+  // region SUPPORT
   compile "com.android.support:appcompat-v7:${supportVersion}"
   compile "com.android.support:design:${supportVersion}"
   compile "com.android.support:cardview-v7:${supportVersion}"
-  //compile "com.android.support:palette-v7:${supportVersion}"
+  compile 'com.android.support.constraint:constraint-layout:1.0.2'
+  // endregion
 
+  // region KOTLIN
   compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-  //implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+  // endregion
+
+  // region NETWORK/IO
   compile 'com.squareup.okhttp3:okhttp:3.8.1'
   compile 'com.squareup.okhttp3:logging-interceptor:3.8.1'
-  compile 'com.google.code.findbugs:jsr305:3.0.2'
-
-  compile "com.google.android.gms:play-services-auth:${playServicesVersion}"
-  //compile "com.google.android.gms:play-services-vision:${playServicesVersion}"
-
-  compile 'com.android.support.constraint:constraint-layout:1.0.2'
-
   compile 'com.google.code.gson:gson:2.8.1'
   compile 'com.squareup.retrofit2:retrofit:2.3.0'
   compile('com.squareup.retrofit2:converter-gson:2.1.0') {
     exclude group: 'com.google.code.gson'
   }
+  // endregion
 
+  // region OTHER
+  compile 'com.google.code.findbugs:jsr305:3.0.2'
   compile 'pub.devrel:easypermissions:0.3.0'
+  // endregion
 
-  // RX JAVA
+  // region PLAY SERVICES
+  compile "com.google.android.gms:play-services-auth:${playServicesVersion}"
+  // endregion
+
+  // region RX
   compile 'io.reactivex.rxjava2:rxjava:2.1.2'
   compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
   compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+  // endregion
 
-  // ARCHITECTURE COMPONENTS
-  //compile "android.arch.lifecycle:runtime:$architectureComponentsVersion"
-  //compile "android.arch.lifecycle:extensions:$architectureComponentsVersion"
-  //kapt "android.arch.lifecycle:compiler:$architectureComponentsVersion"
-
-  // DI
+  // region DI
   compile "com.google.dagger:dagger:${daggerVersion}"
   compile "com.google.dagger:dagger-android:${daggerVersion}"
   compile "com.google.dagger:dagger-android-support:${daggerVersion}"
   kapt "com.google.dagger:dagger-compiler:${daggerVersion}"
   kapt "com.google.dagger:dagger-android-processor:${daggerVersion}"
   provided 'org.glassfish:javax.annotation:10.0-b28'
+  // endregion
 
-  // IMAGE PROCESSING
+  // region IMAGE PROCESSING
   compile 'com.github.bumptech.glide:glide:3.8.0'
+  // endregion
 
-  // TESTING
+  // region ANDROID TESTING
   androidTestCompile "com.android.support.test:runner:$runnerRulesVersion"
   androidTestCompile "com.android.support.test:rules:$runnerRulesVersion"
 
@@ -82,22 +87,18 @@ dependencies {
 
   androidTestCompile "com.android.support.test.espresso:espresso-contrib:$espressoVersion"
   androidTestCompile "com.android.support.test.espresso:espresso-intents:$espressoVersion"
-
   androidTestCompile "com.android.support:support-annotations:$supportVersion"
-  //androidTestCompile "com.android.support:support-v4:$supportVersion"
-  //androidTestCompile "com.android.support:recyclerview-v7:$supportVersion"
-  //androidTestCompile "com.android.support:appcompat-v7:$supportVersion"
   androidTestCompile "com.android.support:design:$supportVersion"
-  //androidTestCompile "android.arch.core:core-testing:$architectureComponentsVersion"
   androidTestCompile "com.android.support.test.espresso.idling:idling-concurrent:$espressoVersion"
   compile "com.android.support.test.espresso:espresso-idling-resource:$espressoVersion"
   androidTestCompile "com.google.code.findbugs:jsr305:3.0.2"
+  // endregion
 
-
-  //testCompile 'org.jetbrains.kotlin:kotlin-test-junit:1.1.2'
+  // region UNIT TESTING
   testCompile "junit:junit:$junitVersion"
   testCompile 'org.assertj:assertj-core:3.6.1'
   testCompile('com.nhaarman:mockito-kotlin:1.5.0') {
     exclude group: 'org.jetbrains.kotlin'
   }
+  // endregion
 }
