--- a/gradle.properties
+++ b/gradle.properties
@@ -24,7 +24,7 @@
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 
-# Specifies the JVM arguments used for the daemon process.
+# Specifies the JVM arguments used for the daemon processLog.
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx1536m
 
